tests/baselines/reference/classOrder2.errors.txt
tests/cases/compiler/classOrder2.ts(2,17): error TS2653: Base expression references type before it is declared.


==== tests/cases/compiler/classOrder2.ts (1 errors) ====
    
    class A extends B {
                    ~
!!! error TS2653: Base expression references type before it is declared.
    
      foo() { this.bar(); }
    
    }
    
    class B {
    
      bar() { }
    
    }
    
    
    var a = new A();
    
    a.foo();
    
    